SERVER-67678 Incorrect result is returned when there's a wildcard index and a filter like $and: [{field: {$type: 'object'}, {file: {$size: 1}}]